--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     //
     /////////////////////////////////////////////////////////////////////////
     
-    implementation files('lib/pw-swift-integrator-SRU2018-develop-licensed.jar')
-    implementation files('lib/pw-swift-guitools-1.0.1.jar')
+    implementation files('lib/pw-swift-integrator-SRU2019-develop-licensed.jar')
+    implementation files('lib/pw-swift-guitools-1.0.2.jar')
     
     /////////////////////////////////////////////////////////////////////////
 
@@ -43,12 +43,12 @@ dependencies {
     implementation group: 'com.h2database', name: 'h2', version: '1.4.199'
 
     // GUI webjars
-    compile group: 'org.webjars', name: 'bootstrap', version: '4.2.1'
-    compile group: 'org.webjars', name: 'webjars-locator-core', version: '0.35'
-    compile group: 'org.webjars', name: 'jquery', version: '3.3.1-1'
+    compile group: 'org.webjars', name: 'bootstrap', version: '4.3.1'
+    compile group: 'org.webjars', name: 'webjars-locator-core', version: '0.43'
+    compile group: 'org.webjars', name: 'jquery', version: '3.4.1'
     compile group: 'org.webjars', name: 'jquery-ui', version: '1.12.1'
     compile group: 'org.webjars.bower', name: 'jquery-mask-plugin', version: '1.14.15'
-    compile group: 'org.webjars', name: 'jquery-validation', version: '1.17.0-1'
+    compile group: 'org.webjars', name: 'jquery-validation', version: '1.19.0'
     compile group: 'org.webjars', name: 'jquery.inputmask', version: '3.3.7'
 
     // JST taglib "fmt"
