--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 plugins {
     id 'org.springframework.boot' version '2.2.2.RELEASE'
     id 'java'
+    id 'war'
     id 'idea'
     id 'eclipse'
 }
 
+apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+
 
 group = 'com.prowidesoftware'
 version = '1.0.1'
@@ -34,10 +37,20 @@ dependencies {
     
     /////////////////////////////////////////////////////////////////////////
 
-    // Spring Boot
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    // Spring Boot for WildFly container:
+    implementation ('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: "spring-boot-starter-tomcat"
+    }
+    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+    implementation 'javax.xml.bind:jaxb-api:2.2.5'
+    implementation 'com.sun.xml.bind:jaxb-impl:2.2.5'
+    // we also configure standalone.sh with MODULE_OPTS="-jaxpmodule \"javax.xml.jaxp-provider\""
+
+    // With embedded Tomcat
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
+    //implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    //implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.199'
 
@@ -57,6 +70,7 @@ dependencies {
     implementation('org.apache.commons:commons-lang3:3.8.1')
     implementation('org.apache.commons:commons-text:1.6')
     implementation('com.google.code.gson:gson:2.8.2')
+    implementation 'org.apache.derby:derby:10.12.+'
 
     // Prowide Integrator - Validation
     implementation('org.mozilla:rhino:1.7.7.2')
