--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,9 @@ dependencies {
     // we also configure standalone.sh with MODULE_OPTS="-jaxpmodule \"javax.xml.jaxp-provider\""
 
     // With embedded Tomcat
-    //implementation 'org.springframework.boot:spring-boot-starter-web'
-    //implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-    //implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.199'
